<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80CBC4">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/enter_category_name"/>

    <EditText
        android:id="@+id/enterCategoryInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_list_name"
        android:inputType="textCapSentences"
        android:minHeight="48dp"
        android:textColorHint="#004D40"
        android:textCursorDrawable="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterCategoryInput"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterCategoryInput"
        android:text="@string/create"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>